--- a/sidebar.css
+++ b/sidebar.css
@@ -81,7 +81,7 @@ a:hover{
     top: 0;
     left: -30%;
     width: var(--nav-width);
-    height: 125vh;
+    height: 1205h;
     background: rgba(113, 99, 186,255);
     /* background-color: var(--first-color); */
     padding: .5rem 1rem 0 0;
