--- a/navbar.css
+++ b/navbar.css
@@ -2,14 +2,14 @@
     background-color: #fff;
 }
 #navbar-brand{
-    font-weight: 500;
-    color: #009970;
+    font-weight: 700;
+    color: #5D5FF0;
     font-size: 24px;
     transition: 0.3s color;
 }
 .login-button{
-    background-color: #009970;
-    color: #fff;
+    background-color: #5D5FF0;
+    color: #FFFFFF;
     font-size: 14px;
     border-radius: 50px;
     padding: 8px 20px;
@@ -18,7 +18,7 @@
 }
 
 .login-button:hover{
-    background-color: #00b383;
+    background-color: #5759b3;
 }
 
 .navbar-toggler{
@@ -47,7 +47,7 @@
         transform: translateX(-50%);
         width: 0;
         height: 2px;
-        background-color: #009970;
+        background-color: #5D5FF0;
         visibility: hidden;
         transition: 0.3s ease-in-out;
     }
