--- a/sidebar.css
+++ b/sidebar.css
@@ -3,7 +3,7 @@
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
-    --first-color: #4723D9;
+    --first-color: #5D5FF0;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
     --body-font: 'Nunito', sans-serif;
@@ -35,11 +35,12 @@ a {
     gap: 1.5rem;
     /* text-decoration: none */
 }
-a:hover{
-    background: #e0e0e058;
-    border-radius: 8px ;
+/* a:hover{ */
+    /* background: #5D5FF0; */
+    /* background: #e0e0e058; */
+    /* border-radius: 8px ; */
 
-}
+/* } */
 
 .header {
     width: 100%;
@@ -52,16 +53,16 @@ a:hover{
     justify-content: space-between;
     padding: 0 1rem;
     /* background-color: var(--white-color); */
-    background: #ebe9e9;
+    background: #FFFFFF;
     z-index: var(--z-fixed);
     transition: .5s
 }
 
-.header_toggle {
+/* .header_toggle {
     color: var(--first-color);
     font-size: 1.5rem;
     cursor: pointer
-}
+} */
 
 .header_img {
     width: 35px;
@@ -82,8 +83,8 @@ a:hover{
     left: -30%;
     width: var(--nav-width);
     height: 125vh;
-    background: rgba(113, 99, 186,255);
-    /* background-color: var(--first-color); */
+    /* background: rgba(113, 99, 186,255); */
+    background: #FFFFFF;
     padding: .5rem 1rem 0 0;
     transition: .5s;
     z-index: var(--z-fixed)
@@ -103,36 +104,50 @@ a:hover{
     grid-template-columns: max-content max-content;
     align-items: center;
     column-gap: 1rem;
+    color: gray;
     padding: .5rem 0 .5rem 1.5rem
 }
-
+.nav_link:hover{
+    background: #a2a2a3;
+    border-radius: 8px ;
+}
 .nav_logo {
     margin-bottom: 2rem
 }
 
 .nav_logo-icon {
     font-size: 1.25rem;
-    color: var(--white-color)
+    /* color: gray; */
+    /* color: var(--white-color); */
 }
 
 .nav_logo-name {
-    color: var(--white-color);
+    color: #374151;
+    /* color: var(--white-color); */
     font-weight: 700
 }
-
+.nav_logo:hover{
+    /* color: #fff; */
+    background: #fff;
+}
 .nav_link {
     position: relative;
-    color: var(--first-color-light);
+    /* color: var(--first-color-light); */
+    color: gray;
     margin-bottom: 1.5rem;
     transition: .3s
+}
+.nav_name{
+    font-weight: 500;
 }
 
 .nav_link:hover {
     color: var(--white-color)
+    /* color: #2563eb; */
 }
 
 .nav_icon {
-    font-size: 1.25rem
+    font-size: 1.28rem
 }
 
 .show {
@@ -144,17 +159,19 @@ a:hover{
 }
 
 .active {
-    color: var(--white-color)
+    color: gray;
+    /* color: var(--white-color) */
 }
 
-.active::before {
+/* .active::before {
     content: '';
     position: absolute;
     left: 0;
     width: 2px;
     height: 32px;
-    background-color: var(--white-color)
-}
+    background-color: #5D5FF0;
+    
+} */
 
 .height-100 {
     height: 100vh
@@ -201,8 +218,8 @@ a:hover{
     gap: 1rem;
 }
 .user--info img{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     cursor: pointer;
 }
